Fri Apr 24 04:49:05 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/Makefile.sub: MSVC14 have struct timespec.

	* win32/rtname.cmd: support vcruntime140.dll.

	* time.c (localtime_with_gmtoff_zone): MSVC14 doesn't have tzname and
	  daylight but have _tzname and _daylight.

Thu Apr 23 11:35:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_obj_instance_eval, rb_obj_instance_exec): allow
	  symbols to just instance_eval/exec, except for definition of
	  singletons.  [ruby-core:68961] [Bug #11086]

Thu Apr 23 10:01:36 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/delegate.rb: fix a typo.
	  [fix GH-881][ci skip] Patch by @Zorbash

Wed Apr 22 18:36:50 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (move, uid_move): support the MOVE command defined
	  in RFC6851.  Patch by ojab ojab.
	  [ruby-core:68960] [Feature #11077]

Tue Apr 22 12:42:12 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* test/ruby/test_object.rb: add tests for Kernel#String and Kernel#Array.
	  [fix GH-879][fix GH-880] Patch by @yui-knk

Tue Apr 21 20:46:02 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/ruby/test_object.rb: renamed tests to explicitly class name.
	  [fix GH-877] Patch by @yui-knk

Tue Apr 21 05:31:00 2015  Eric Wong  <e@80x24.org>

	* ext/socket/lib/socket.rb (connect_internal): avoid common exceptions
	  from connect_nonblock. [ruby-core:68909]

Mon Apr 20 23:46:53 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_wreadlink): follow the official format of
	  REPARSE_DATA_BUFFER structure.

Mon Apr 20 20:23:04 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk ($(arch)-fake.rb): revert r50354 because bsdmake seems not
	  to handle such substitution.

	* tool/expand-config.rb: convert path separators here.

Mon Apr 20 16:52:20 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/fake.rb: don't fake libdir.  use libdirname instead.

Mon Apr 20 16:49:52 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
